fixing button mobile issue

--- a/src/components/EmailListForm.module.scss
+++ b/src/components/EmailListForm.module.scss
@@ -33,7 +33,7 @@
   
     button {
       display: inline-block;
-      
+      border-radius: 0;
       border: none;
       background-image: none;
       background-color: #DD0505;
